--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1,5 +1,6 @@
 .navmain{
     background-image: url('/Assets/Hero-bg.png');
+    padding-bottom: 152px;
 }
 .inter-font {
   font-family: "Inter", sans-serif;
