--- a/styles/intouch.css
+++ b/styles/intouch.css
@@ -4,6 +4,7 @@
 }
 
 .feedback h3{
+    font-family: Inter;
     font-size: 42px;
     font-weight: bold;
     text-align: center;
@@ -11,12 +12,14 @@
 
 .heading{
     font-size: 24px;
+    font-family: Inter;
     font-weight: 600px;
 }
 
 .need-flex{
     display: flex;
     gap: 15px;
+    align-items: center;
     margin-top: 25px;
 }
 
@@ -37,6 +40,7 @@
 
 .fdb2{
     display: flex;
+    font-family: Inter;
     margin-top: 50px;
     /* margin:50px; */
     gap:20px;
